# mailtrap-cloudflare-dns

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  Justfile  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
docs/architecture/: 0000-adr-why-not-use-cloudflare-python-library.md
src/mailtrap_cloudflare_dns/: cli.py  cloudflare_api.py  mailtrap_api.py  main.py  operations.py
src/mailtrap_cloudflare_dns/common/: types.py
tests/: test_cloudflare_api.py  test_mailtrap_api.py
